infra/eks/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: diabetes-ingress
  namespace: diabetes
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: diabetes-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: diabetes-service
                port:
                  number: 8501
